--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ÉPÜLETENERGETIKA – Teljes körű mérnöki tervezés</title>
   <meta name="description" content="Helfrich Salamon – építészeti és mérnöki tervezés: építészet, statika, geotechnika, energetika, tűzvédelem, tartószerkezeti szakértés." />
+  
+
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6WZEZESQ3L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6WZEZESQ3L');
+</script>
+  
+
+
+  
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root{
