--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ÉPÜLETENERGETIKA – Teljes körű mérnöki tervezés</title>
-  <meta name="description" content="Helfrich Salamon – építészeti és mérnöki tervezés: építészet, statika, geotechnika, energetika, tűzvédelem, tartószerkezeti szakértés." />
+  <meta name="description" content="Helfrich Salamon – építészeti és mérnöki tervezés: építészet, statika, geotechnika, energetika, tűzvédelem, tartószerkezeti szakértés Harta és környékén." />
   
 
 
-  <!-- Google tag (gtag.js) -->
+  <!-- Google Analytics   tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6WZEZESQ3L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
