--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ÉPÜLETENERGETIKA – Teljes körű mérnöki tervezés</title>
-  <meta name="description" content="Helfrich Salamon – építészeti és mérnöki tervezés: építészet, statika, geotechnika, energetika, tűzvédelem, tartószerkezeti szakértés Harta és környékén." />
+  
+  <title>Épületenergetikai tanúsítvány és tűzvédelmi tervezés – Harta és környéke</title>
+  <meta name="description" content="Ifj. Helfrich Salamon okl. szerkezet-építőmérnök | Energetikai tanúsítványok, tűzvédelmi dokumentáció, épületenergetikai számítások Hartán és Bács-Kiskun megyében. Gyors, pontos és megbízható szolgáltatás.">
+  <meta name="keywords" content="energetikai tanúsítvány Harta, tűzvédelmi dokumentáció Harta, épületenergetika, statikus mérnök, építész, Bács-Kiskun megye, Helfrich Salamon mérnök">
+
   
 
 
@@ -95,13 +98,38 @@
       .reasons{grid-template-columns:1fr}
     }
   </style>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Ifj. Helfrich Salamon",
+  "jobTitle": "okleveles szerkezet-építőmérnök",
+  "telephone": "+36 30 689 0916",
+  "email": "ihelfrichsalamon@gmail.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Széchenyi István u. 89.",
+    "addressLocality": "Harta",
+    "postalCode": "6326",
+    "addressCountry": "HU",
+    "addressRegion": "Bács-Kiskun"
+  },
+  "url": "https://sigma-tervezoiroda.github.io/sigma-mernokiroda/",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Épületenergetikai és mérnöki szolgáltatások"
+  }
+}
+</script>
+
 </head>
 <body>
 
   <!-- HERO -->
   <header class="hero">
     <div class="container">
-      <h1>  IFJ. HELFRICH SALAMON</h1>
+      <h1>IFJ. HELFRICH SALAMON</h1>
       <h1>okl. szerkezet- építőmérnök</h1>
       <p>Energetikai tanúsítványok – adásvételhez, pályázathoz </p>
       <p>Tűzvédelmi dokumentáció készítése</p>
@@ -119,7 +147,7 @@
 
   <!-- SZOLGÁLTATÁSOK -->
   <section class="container">
-    <h2>Szolgáltatások:</h2>
+    <h2>Szolgáltatások – energetika és tűzvédelem:</h2>
     <div class="grid" style="margin-top:18px">
 
       <!-- 1 -->
@@ -153,9 +181,9 @@
   <section class="container">
     <h2>Kapcsolat:</h2>
     <div class="contact" aria-labelledby="kapcsolat">
-      <p><strong>Cím:</strong> 6326 Harta Széchenyi I. u.89.</p>
+      <p><strong>Cím:</strong> 6326 Harta, Széchenyi István u. 89. – Bács-Kiskun megye</p>
       <p><strong>Telefon:</strong> 06 30 689 09 16</p>
-      <p><strong>E-mail:</strong> ihelfrichsalamon@gmail.com</p>
+      <p><strong>E-mail:</strong> ifjhelfrichsalamon@gmail.com</p>
     </div>
   </section>
 
